Add details & progress tags

--- a/HTML/Teoria/Formularios.html
+++ b/HTML/Teoria/Formularios.html
@@ -41,7 +41,13 @@
 
     -->
 
-    <!-- <input type="text" id="nombre" name="nombre" placeholder="Escribe tu nombre" required> -->
+    <!-- <input
+      type="text"
+      id="nombre"
+      name="nombre"
+      placeholder="Escribe tu nombre"
+      required
+    /> -->
 
     <!-- ===================================================== -->
     <!-- FORMATO LABEL -->
@@ -68,10 +74,10 @@
     -->
 
     <!-- <label for="nombre">Nombre</label>
-    <br>
+    <br />
     <label>
-        Nombre
-        <input type="text" name="nombre">
+      Nombre
+      <input type="text" name="nombre" />
     </label> -->
 
     <!-- ===================================================== -->
