Add: Contenido ya visto en clase. Update: Add indice al nombre fichero

--- a/HTML/Teoria/15_etiquetasDeMaquetado.html
+++ b/HTML/Teoria/15_etiquetasDeMaquetado.html
@@ -43,7 +43,7 @@
 				<h3 class="titulo">Este es el titulo de mi post</h3>
 				<p class="fecha">07 de Septiembre de 1995</p>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque, quae.</p>
-				<img src="img/logo_chan_do_monte.webp" alt="Logo chan do monte" />
+				<img src="media/logo_chan_do_monte.webp" alt="Logo chan do monte" />
 			</div>
 		</div>
 
@@ -126,7 +126,7 @@
 
 				<!-- <figure> y <figcaption>: Agrupan una imagen y su pie o descripción -->
 				<figure>
-					<img src="img/logo_chan_do_monte.webp" alt="Logo chan do monte" />
+					<img src="media/logo_chan_do_monte.webp" alt="Logo chan do monte" />
 					<figcaption>Montaña Nevada al atardecer</figcaption>
 				</figure>
 			</article>
