cambios svg - plantilla ejemplo ejercicio mi_mural

--- a/HTML/Teoria/14_svg.html
+++ b/HTML/Teoria/14_svg.html
@@ -80,6 +80,10 @@
 			<text x="30" y="180" font-size="16" fill="black">Ejemplo SVG</text>
 		</svg> -->
 
+
+		<h2>Tutorial edición SVG</h2>
+		<a href="https://www.freecodecamp.org/news/svg-tutorial-learn-to-code-images/">SVG Tutorial – How to Code Images with 12 Examples</a>
+
 	</body>
 </html>
 
