--- a/HTML/Teoria/06_tablas.html
+++ b/HTML/Teoria/06_tablas.html
@@ -99,7 +99,7 @@
 			Los estilos visuales (bordes, colores, espaciado)
 			se controlan con CSS, no con atributos HTML.
 		-->
-		<style>
+		<!-- <style>
 			table {
 				border-collapse: collapse; /* Bordes combinados */
 				width: 60%;
@@ -118,7 +118,7 @@
 				font-weight: bold;
 				text-align: center;
 			}
-		</style>
+		</style> -->
 
 		<!-- =============================================== -->
 		<!--	RESUMEN DE ETIQUETAS DE TABLAS EN HTML         -->
