--- a/HTML/Teoria/07_formularios.html
+++ b/HTML/Teoria/07_formularios.html
@@ -332,7 +332,7 @@
   🔹 Para pruebas, se puede enviar a https://httpbin.org/post (muestra los datos enviados).
 -->
 
-    <!-- <form
+    <form
       action="https://httpbin.org/post"
       method="post"
       id="formularioCompleto"
@@ -482,6 +482,6 @@
           width="50"
         />
       </fieldset>
-    </form> -->
+    </form>
   </body>
 </html>
